# migration-tool

./: .gitignore  README.md  TASK.md  docker-compose.yml  pyproject.toml
db_schemas/: 1.sql  2.sql
src/: database_syncer.py  main.py  utils.py
